k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugging-face-demo
  namespace: hf-demo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: hf-demo-rewrite-host-for-gradio@kubernetescrd
spec:
  ingressClassName: traefik         
  rules:
    - host: hf-demo.local   # CHANGE: your DNS name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hugging-face-demo
                port:
                  number: 80
